--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -240,6 +240,8 @@
       <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
         <img *ngIf="!stepOneFlipped" src="../../assets/img/step_1.png" class="step-card-responsive" (click)="flipFirstStep()">
         <img *ngIf="stepOneFlipped" src="../../assets/img/step_1_details.png" class="step-card-responsive" (click)="flipFirstStep()">
+        <!-- <img *ngIf="!stepOneFlipped" src="../../assets/img/step_1.png" class="step-card-responsive" (click)="flipFirstStep()" [@flipState]="flip">
+        <img *ngIf="stepOneFlipped" src="../../assets/img/step_1_details.png" class="step-card-responsive" (click)="flipFirstStep()" [@flipState]="flip"> -->
       </div>
       <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
         <img *ngIf="!stepTwoFlipped" src="../../assets/img/step_2.png" class="step-card-responsive" (click)="flipSecondStep()">
@@ -251,9 +253,12 @@
       </div>
     </div>
     <div class="row pt-3 py-5">
+      <ngx-smart-modal #consultationModal identifier="consultationModal">
+        <aqueduct-consultation-form></aqueduct-consultation-form>
+      </ngx-smart-modal>
       <div class="col-lg-4"></div>
       <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
-        <button class="schedule-consultation-button p-3">
+        <button class="schedule-consultation-button p-3" (click)="consultationModal.open()">
           Get Started
         </button>
       </div>
