--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import 'apple_devices';
 @import 'devices.min.css';
+@import "~ngx-smart-modal/ngx-smart-modal";
 
 body {
   margin: 0;
@@ -55,23 +56,51 @@ section {
   display: block;
 }
 
-#modal-container {
-  position: fixed;
-  top: 300px;
-  left: 50%;
-  width: 100%;
-  background: #FFFFFF;
-  text-align: center;
-  box-shadow: 0px 0px 2px 1px #000000;
-  z-index: 100;
+body.dialog-open ngx-smart-modal {
+  position: fixed !important;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: scroll !important;
 }
 
-#overlay {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 99;
-  width: 100%;
-  height: 100%;
+body.dialog-open {
+  overflow: scroll !important;
 }
 
+.overlay {
+  overflow-y: scroll !important;
+}
+
+.schedule-consultation-button {
+  color: #A4BDBF;
+  font-size: 18px;
+  text-transform: uppercase;
+  border: 2px solid #A4BDBF;
+  background-color: transparent;
+  -webkit-font-smoothing: subpixel-antialiased;
+  cursor: pointer;
+  letter-spacing: 2px;
+}
+
+.schedule-consultation-button:hover {
+  color: #FFFFFF;
+  background-color: #A4BDBF;
+}
+
+.see-how-button {
+  color: #A4BDBF;
+  font-size: 24px;
+  text-transform: uppercase;
+  border: 2px solid #A4BDBF;
+  background-color: transparent;
+  -webkit-font-smoothing: subpixel-antialiased;
+  cursor: pointer;
+  letter-spacing: 2px;
+}
+
+.see-how-button:hover {
+  color: #FFFFFF;
+  background-color: #A4BDBF;
+}
