Adding MySQL error handler to server.js
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,11 @@
       </li> -->
       <li class="nav-item navbar-link-item">
         <a class="nav-link navbar-link-item" href="#">Work With Us</a>
+        <!-- <div class="nav-link navbar-link-item" (click)="workWithUsModal.open()">Work With Us</div> -->
       </li>
     </ul>
   </div>
 </nav>
+<!-- <ngx-smart-modal #workWithUsModal identifier="workWithUsModal">
+  <aqueduct-consultation-form></aqueduct-consultation-form>
+</ngx-smart-modal> -->
