--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
 <section id="who-we-are" class="white-background">
   <div id="particles-js"></div>
   <div class="container py-5">
-    <div class="row pt-3 py-5 align-items-center align-content-center">
+    <div class="row py-5 align-items-center align-content-center">
       <div class="col-sm-12 col-md-12 col-lg-7">
         <h1 class="who-we-are-header">
           Making the World Work
@@ -44,7 +44,9 @@
           of humanity. In order to accomplish this, we're starting with water.
         </p>
         <p class="who-we-are-paragraph pt-4">
-          The stability of our communities and industries around the world are dependent on a continuous supply of potable water to their residential, commercial, and agricultural zones. Aqueduct strives to help municipalities and water utilities intelligently reduce non-revenue water loss.
+          The stability of our communities and industries around the world are dependent on a continuous supply of potable water to
+          their residential, commercial, and agricultural zones. Aqueduct strives to help municipalities and water utilities
+          intelligently reduce non-revenue water loss.
         </p>
         <div class="learn-more-action pt-4" [ngx-scroll-to]="'#how-we-help'">
           Learn More
@@ -62,7 +64,7 @@
 <section id="how-we-help" class="white-background">
   <div id="particles-js-2"></div>
   <div class="container">
-    <!-- <div class="row pt-3 py-5">
+    <!-- <div class="row py-5">
       <div class="col-sm-12 col-md-12 col-lg-5">
         <h1 class="how-we-help-header">
           How We Help
@@ -85,14 +87,14 @@
         </div>
       </div>
     </div> -->
-    <div class="row pt-3 py-3">
+    <div class="row py-3">
       <div class="col-sm-12 col-md-12 col-lg-12 text-align-left">
         <h1 class="how-we-help-header">
           How We Help
         </h1>
       </div>
     </div>
-    <div class="row pt-3 py-5 align-items-center">
+    <div class="row py-5 align-items-center">
       <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
         <h1 class="know-infrastructure-header py-2">
           Know Your Infrastructure
@@ -132,12 +134,9 @@
               />
               <path class="cls-2" d="M5.33,90.39,150.26,0,295.18,90.39l-144.92,90.4L5.33,90.39Zm56.08,0L150.26,35,239.1,90.39l-88.84,55.42L61.41,90.39Z"
               />
-              <path class="cls-3" d="M145.3,190.19V352.51L0,262.35V100l145.3,90.16ZM116,204.74V301.6L29.3,247.8V151L116,204.74Z"
-              />
-              <path class="cls-2" d="M146.43,90.91c0,1.23.9,2,2.7,2.2V88.67a3.22,3.22,0,0,0-1.92.58,1.91,1.91,0,0,0-.78,1.66Z"
-              />
-              <path class="cls-2" d="M150.92,96.54v5.06a3.16,3.16,0,0,0,2.08-.73,2.31,2.31,0,0,0,.84-1.86c0-1.29-1-2.11-2.92-2.47Z"
-              />
+              <path class="cls-3" d="M145.3,190.19V352.51L0,262.35V100l145.3,90.16ZM116,204.74V301.6L29.3,247.8V151L116,204.74Z" />
+              <path class="cls-2" d="M146.43,90.91c0,1.23.9,2,2.7,2.2V88.67a3.22,3.22,0,0,0-1.92.58,1.91,1.91,0,0,0-.78,1.66Z" />
+              <path class="cls-2" d="M150.92,96.54v5.06a3.16,3.16,0,0,0,2.08-.73,2.31,2.31,0,0,0,.84-1.86c0-1.29-1-2.11-2.92-2.47Z" />
               <path class="cls-2" d="M155.62,70.06a.78.78,0,0,1,.21,0,64.41,64.41,0,0,0,3.56-5.65c2.72-4.72-4.06-4.7-9.12-4.7s-11.64-.12-9.22,4.7a31.46,31.46,0,0,0,3.57,5.72,1,1,0,0,1,.39-.11Z"
               />
               <path class="cls-2" d="M155.25,102.31a6.88,6.88,0,0,1-4.33,1.71v2.44h-1.79V104c-3.28-.28-5.38-1.86-6.29-4.76l2.84-.66a3.66,3.66,0,0,0,3.45,3V96.38q-3.49-.81-4.56-2a4.35,4.35,0,0,1-1.06-3c0-3,1.88-4.68,5.62-5.14v-1.9h1.79v1.9c2.74.35,4.47,1.71,5.19,4.06l-2.68.56a2.85,2.85,0,0,0-2.51-2.19v4.61a34.16,34.16,0,0,1,3.48,1.14A3.83,3.83,0,0,1,156,96a5,5,0,0,1,.72,2.7,4.85,4.85,0,0,1-1.49,3.64Zm1.63-29c-.19.89-.69,1.52-1.27,1.52H145c-.67,0-1.22-.82-1.35-1.91-7.84,4.76-14.23,16.93-14.23,26.52,0,12.19,9.32,15.57,20.82,15.57s20.82-3.38,20.82-15.57c0-9.34-6.88-21.13-14.2-26.13Z"
@@ -186,7 +185,19 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-4 pt-4"></div>
     </div>
-    <!-- <div class="row pt-3 py-5">
+    <!-- <div class="row align-items-center">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+        <ngx-smart-modal #whitepaperModal identifier="whitepaperModal">
+          <aqueduct-consultation-form></aqueduct-consultation-form>
+        </ngx-smart-modal>
+        <div class="learn-more-action pt-4" (click)="whitepaperModal.open()">
+          Our Whitepaper
+          <fa name="chevron-right" class="pl-2"></fa>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-12 col-lg-8 pt-4"></div>
+    </div> -->
+    <!-- <div class="row py-5">
       <div class="col-sm-12 col-md-12 col-lg-4"></div>
       <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
         <div style="font-size:0.3px;">
@@ -200,26 +211,6 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-4"></div>
     </div> -->
-    <!-- <div class="row pt-3 py-5">
-      <div class="col-sm-12 col-md-12 col-lg-5">
-        <p class="who-we-are-paragraph pt-4">
-          We help you make more informed decisions. With the power of better, more accurate analytics, you'll have a greater ability
-          to manage the risks facing your entire public water system.
-        </p>
-        <div class="learn-more-action pt-4">
-          Read Our Whitepaper
-          <fa name="chevron-right" class="pl-2"></fa>
-        </div>
-      </div>
-      <div class="col-lg-1"></div>
-      <div class="col-lg-6 control-risks-background p-0">
-        <div class="d-flex align-items-start">
-          <h1 class="know-infrastructure-header white-background py-4 px-3">
-            Control Your Risks
-          </h1>
-        </div>
-      </div>
-    </div> -->
   </div>
 </section>
 
@@ -227,7 +218,7 @@
 <section id="how-it-works" class="white-background">
   <div id="particles-js-3"></div>
   <div class="container py-5">
-    <div class="row pt-3 py-5">
+    <div class="row py-5">
       <div class="col-sm-12 col-md-12 col-lg-5">
         <h1 class="how-it-works-header">
           How It Works
@@ -237,22 +228,22 @@
       <div class="col-lg-6"></div>
     </div>
     <div class="row py-5">
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center py-3">
         <img *ngIf="!stepOneFlipped" src="../../assets/img/step_1.png" class="step-card-responsive" (click)="flipFirstStep()">
         <img *ngIf="stepOneFlipped" src="../../assets/img/step_1_details.png" class="step-card-responsive" (click)="flipFirstStep()">
         <!-- <img *ngIf="!stepOneFlipped" src="../../assets/img/step_1.png" class="step-card-responsive" (click)="flipFirstStep()" [@flipState]="flip">
         <img *ngIf="stepOneFlipped" src="../../assets/img/step_1_details.png" class="step-card-responsive" (click)="flipFirstStep()" [@flipState]="flip"> -->
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center py-3">
         <img *ngIf="!stepTwoFlipped" src="../../assets/img/step_2.png" class="step-card-responsive" (click)="flipSecondStep()">
         <img *ngIf="stepTwoFlipped" src="../../assets/img/step_2_details.png" class="step-card-responsive" (click)="flipSecondStep()">
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center pt-3">
         <img *ngIf="!stepThreeFlipped" src="../../assets/img/step_3.png" class="step-card-responsive" (click)="flipThirdStep()">
         <img *ngIf="stepThreeFlipped" src="../../assets/img/step_3_details.png" class="step-card-responsive" (click)="flipThirdStep()">
       </div>
     </div>
-    <div class="row pt-3 py-5">
+    <div class="row py-5">
       <ngx-smart-modal #consultationModal identifier="consultationModal">
         <aqueduct-consultation-form></aqueduct-consultation-form>
       </ngx-smart-modal>
