--- a/src/app/whitepaper/whitepaper.component.scss
+++ b/src/app/whitepaper/whitepaper.component.scss
@@ -2,11 +2,12 @@ label {
   color: #818f84;
 }
 
-.consultation-form-header {
+.whitepaper-form-header {
   color: #354948;
 }
 
-.consultation-form-paragraph {
+.whitepaper-form-paragraph {
+  // color: #8E9C8F;
   color: #A8BCB9;
   font-size: 18px;
   font-weight: 300;
