--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -21,11 +21,13 @@
   font-size: 20px !important;
   letter-spacing: 2.4px !important;
   padding: 1rem 1rem !important;
+  cursor: pointer !important;
 }
 
 .navbar-link-item:hover {
+  cursor: pointer !important;
 	-webkit-animation: text-shadow-drop-center 0.6s both;
-	        animation: text-shadow-drop-center 0.6s both;
+          animation: text-shadow-drop-center 0.6s both;
 }
 
 @-webkit-keyframes text-shadow-drop-center {
@@ -44,3 +46,13 @@
     text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
   }
 }
+
+@media (max-width: 575.98px) { 
+  .aqueduct-branding {
+    text-transform: uppercase !important;
+    color: #354948 !important;
+    font-size: 28px !important;
+    letter-spacing: 9px !important;
+    padding: 1rem 1rem !important;
+  }
+ }
