--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import 'apple_devices';
 @import 'devices.min.css';
 @import "~ngx-smart-modal/ngx-smart-modal";
+@import url("https://use.fontawesome.com/releases/v5.0.13/css/all.css");
 
 body {
   margin: 0;
@@ -48,6 +49,12 @@ section {
   position: absolute;
 }
 
+#particles-js-4 {
+  width: 100%;
+  height: 25%;
+  position: absolute;
+}
+
 .hidden {
   display: none;
 }
@@ -71,7 +78,12 @@ body.dialog-open {
 
 .overlay {
   overflow-y: scroll !important;
+  // z-index: 1040 !important;
 }
+
+// .nsm-dialog.nsm-dialog-open {
+//   z-index: 1042 !important;
+// }
 
 .schedule-consultation-button {
   color: #A4BDBF;
