--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,8 +37,8 @@
       <!-- <ngx-smart-modal #whitepaperModal identifier="whitepaperModal">
         <aqueduct-whitepaper-form></aqueduct-whitepaper-form>
       </ngx-smart-modal> -->
-      <div class="col-sm-12 col-md-12 col-lg-7">
-        <h1 class="who-we-are-header">
+      <div class="col-sm-12 col-md-12 col-lg-7 order-3 py-5">
+        <h1 class="who-we-are-header header-alignment">
           Making the World Work
           <br> More Intelligently
         </h1>
@@ -51,7 +51,7 @@
           their residential, commercial, and agricultural zones. Aqueduct strives to help municipalities and water utilities
           intelligently reduce non-revenue water loss.
         </p>
-        <div class="learn-more-action pt-4" [ngx-scroll-to]="'#how-we-help'">
+        <div class="learn-more-action cta-alignment pt-4" [ngx-scroll-to]="'#how-we-help'">
           Learn More
           <fa name="chevron-right" class="pl-2"></fa>
         </div>
@@ -60,8 +60,8 @@
           <fa name="chevron-right" class="pl-2"></fa>
         </div> -->
       </div>
-      <div class="col-lg-5">
-        <img src="../../assets/img/aqueduct_stat.png" class="leak-stat float-right">
+      <div class="col-lg-5 order-2 order-md-12 text-align-center py-5">
+        <img src="../../assets/img/aqueduct_stat.png" class="leak-stat float-md-right">
       </div>
     </div>
   </div>
@@ -95,14 +95,14 @@
       </div>
     </div> -->
     <div class="row py-3">
-      <div class="col-sm-12 col-md-12 col-lg-12 text-align-left">
+      <div class="col-sm-12 col-md-12 col-lg-12 header-alignment">
         <h1 class="how-we-help-header">
           How We Help
         </h1>
       </div>
     </div>
     <div class="row py-5 align-items-center">
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center order-2 order-md-1">
         <h1 class="know-infrastructure-header py-2">
           Know Your Infrastructure
         </h1>
@@ -111,7 +111,7 @@
           predict location of leaks, likelihood of asset failure, and more.
         </p>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center order-1 order-md-2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 352.74" width="300" height="300">
           <defs>
             <style>
@@ -172,7 +172,7 @@
           </g>
         </svg>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center order-3 order-md-3">
         <h1 class="know-infrastructure-header py-2">
           Control Your Risks
         </h1>
@@ -181,13 +181,13 @@
           to manage the risks facing your entire public water system.
         </p>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 pt-4">
-        <div class="learn-more-action pt-4" (click)="openModalType('whitepaperModal')">
+      <div class="col-sm-12 col-md-12 col-lg-4 pt-4 order-6 order-md-4">
+        <div class="learn-more-action cta-alignment pt-4" (click)="openModalType('whitepaperModal')">
           Our Whitepaper
           <fa name="chevron-right" class="pl-2"></fa>
         </div>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center pt-4">
+      <div class="col-sm-12 col-md-12 col-lg-4 text-align-center pt-4 order-4 order-md-5">
         <h1 class="know-infrastructure-header py-2">
           Positive Bottom-Line Results
         </h1>
@@ -195,7 +195,7 @@
           Assess the health and improve the operational efficiency of your assets through a strengthened business intelligence.
         </p>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-4 pt-4"></div>
+      <div class="col-sm-12 col-md-12 col-lg-4 pt-4 order-5 order-md-6"></div>
     </div>
     <!-- <div class="row align-items-center">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
@@ -231,7 +231,7 @@
   <div id="particles-js-3"></div>
   <div class="container py-5">
     <div class="row py-5">
-      <div class="col-sm-12 col-md-12 col-lg-5">
+      <div class="col-sm-12 col-md-12 col-lg-5 header-alignment">
         <h1 class="how-it-works-header">
           How It Works
         </h1>
