--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,8 @@
         </div> -->
       </div>
       <div class="col-lg-5 order-2 order-md-12 text-align-center py-5">
-        <img src="../../assets/img/aqueduct_stat.png" class="leak-stat float-md-right">
+        <!-- <img src="../../assets/img/aqueduct_stat.png" class="leak-stat float-md-right"> -->
+        <img src="../../assets/img/aqueduct_stat_10.png" class="leak-stat float-md-right">
       </div>
     </div>
   </div>
