--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <!-- <a class="nav-link navbar-link-item" href="#">Who We Are
           <span class="sr-only">(current)</span>
         </a> -->
-        <div class="nav-link navbar-link-item" (click)="scrollToPageSection('who-we-are')">Who We Are</div>
+        <div class="nav-link navbar-link-item" (click)="scrollToPageSection('who-we-are')">Our Mission</div>
       </li>
       <li class="nav-item navbar-link-item">
         <!-- <a class="nav-link navbar-link-item" href="#">What We Do</a> -->
