--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import 'apple_devices';
 @import 'devices.min.css';
 @import "~ngx-smart-modal/ngx-smart-modal";
+@import "~ngx-toastr/toastr.css";
 @import url("https://use.fontawesome.com/releases/v5.0.13/css/all.css");
 
 body {
