--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       <div class="col-lg-3"></div>
       <div class="col-sm-12 col-md-12 col-lg-6">
         <p class="header-paragraph">
-          We use machine learning to help Public Water Systems more accuractely detect leaks.
+          We use machine learning to help Public Water Systems more accurately detect leaks.
         </p>
       </div>
       <div class="col-lg-3"></div>
@@ -61,8 +61,9 @@
         </div> -->
       </div>
       <div class="col-lg-5 order-2 order-md-12 text-align-center py-5">
-        <!-- <img src="../../assets/img/aqueduct_stat.png" class="leak-stat float-md-right"> -->
-        <img src="../../assets/img/aqueduct_stat_10.png" class="leak-stat float-md-right">
+        <!-- <img src="../../assets/img/aqueduct_stat_10.png" class="leak-stat float-md-right"> -->
+        <img *ngIf="!statFlipped" [class.flip-out-ver-left]="statFlipped" [class.flip-in-ver-right]="!statFlipped" src="../../assets/img/aqueduct_stat_10.png" class="leak-stat float-md-right" (click)="flipStat()">
+        <img *ngIf="statFlipped" [class.flip-out-ver-left]="!statFlipped" [class.flip-in-ver-right]="statFlipped" src="../../assets/img/stat_source.png" class="leak-stat float-md-right" (click)="flipStat()">
       </div>
     </div>
   </div>
