--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       <div class="col-lg-3"></div>
       <div class="col-sm-12 col-md-12 col-lg-6">
         <p class="header-paragraph">
-          We use machine learning to help Public Water Systems more accurately detect leaks.
+          We use machine learning to help Public Water Systems increase their resiliency and save resources.
         </p>
       </div>
       <div class="col-lg-3"></div>
