Changing homepage copy
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,15 +4,15 @@
     <div class="row pt-3">
       <div class="col-lg-3"></div>
       <div class="col-sm-12 col-md-12 col-lg-9">
-        <h1 class="header-headline">Saving Water.
-          <br>Intelligently</h1>
+        <h1 class="header-headline">Strengthen Your Water
+          <br>Infrastructure</h1>
       </div>
     </div>
     <div class="row pt-3">
       <div class="col-lg-3"></div>
       <div class="col-sm-12 col-md-12 col-lg-6">
         <p class="header-paragraph">
-          Aqueduct uses machine learning to help water utilities improve the performance and reduce the energy consumption of their pump systems.
+          Aqueduct uses machine learning to help water facilities reduce risk and increase efficiency.
         </p>
       </div>
       <div class="col-lg-3"></div>
