--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -56,6 +56,12 @@ section {
   position: absolute;
 }
 
+#particles-js-5 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 .hidden {
   display: none;
 }
@@ -116,4 +122,30 @@ body.dialog-open {
 .see-how-button:hover {
   color: #FFFFFF;
   background-color: #A4BDBF;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.header-headline {
+  font-size : 60px;
+  letter-spacing : 3px;
+  color : #A4BDBF;
+  color : rgb(164, 189, 191);
+  cursor: default;
+}
+
+.header-paragraph {
+  font-size: 18px;
+  letter-spacing: 1px;
+  color: #8E9C8F;
+}
+
+.italics-font {
+  font-style: italic; 
+}
+
+.profile-image {
+  border-radius: 50%;
 }
